--- a/_Ambulance_Fee_Schedule_Analysis.ipynb
+++ b/_Ambulance_Fee_Schedule_Analysis.ipynb
@@ -11,6 +11,7 @@
     "    * [1.2: Merge](#merge_1_2)\n",
     "        * [1.2.1: Merge HCPCS Codes](#merge_hcpcs_1_2_1)\n",
     "        * [1.2.2: Merge Carrier Codes](#merge_carrier_1_2_2)\n",
+    "        * [1.2.3: Merge Locality Codes](#merge_locality_1_2_3)\n",
     "    * [1.3: Clean](#clean_1_3)\n",
     "* [2: Visualization](#vis_2)\n",
     "    * [2.1: Nation-Wide](#vis_nation_2_1)\n",
@@ -181,6 +182,8 @@
     "# Assign column names to each dataframe\n",
     "for i in range(len(lst_df)):\n",
     "    lst_df[i].columns = col_consistent\n",
+    "    # Convert locality to float\n",
+    "    lst_df[i]['locality'] = lst_df[i]['locality'].astype(float)\n",
     "    # Found ID errors in data\n",
     "    lst_df[i]['contractor/carrier'] = lst_df[i]['contractor/carrier'].astype(str).str.replace('01112', '01102').str.replace('10112', '10102').str.replace('10212', '10202').str.replace('10312', '10302')\n",
     "    # Remove $ signs and convert to float\n",
@@ -283,12 +286,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3 - Clean<a class=\"anchor\" id=\"clean_1_3\"></a>"
+    "##### 1.2.3 - Merge Locality Codes<a class=\"anchor\" id=\"merge_locality_1_2_3\"></a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Create pandas df for each txt file / year\n",
+    "for yr in lst_yrs:\n",
+    "    df_name = 'df_' + str(yr) + '_locality'\n",
+    "    globals()[df_name] = pd.read_csv('./_locality/RVU' + str(yr)[-2:] + '/' + str(yr)[-2:] + 'LOCCO.csv')\n",
+    "    # Drop rows with all NA or all ' '\n",
+    "    globals()[df_name].replace(' ', np.NaN, inplace=True)\n",
+    "    globals()[df_name].dropna(how = 'all', inplace = True)\n",
+    "    # Convert locality number to float for merging\n",
+    "    globals()[df_name]['Locality Number'] = globals()[df_name]['Locality Number'].astype(float)\n",
+    "    # Need Carrier Codes to be 5 in length\n",
+    "    globals()[df_name]['Carrier Number'] = '000000' + globals()[df_name]['Carrier Number']\n",
+    "    globals()[df_name]['Carrier Number'] = globals()[df_name]['Carrier Number'].str[-5:]\n",
+    "    # Found ID errors in data\n",
+    "    globals()[df_name]['Carrier Number'] = globals()[df_name]['Carrier Number'].astype(str).str.replace('01112', '01102').str.replace('10112', '10102').str.replace('10212', '10202').str.replace('10312', '10302').str.replace('00590', '09102').str.replace('00973', '09202')\n",
+    "    # Convert column names to lower case\n",
+    "    globals()[df_name].columns = [i.lower() for i in globals()[df_name].columns]\n",
+    "    # Rename columns\n",
+    "    globals()[df_name].rename(columns={\"fee schedule area \": \"locality name\"}, inplace=True)\n",
+    "    # Convert Locality Name to lowercase\n",
+    "    globals()[df_name]['locality name'] = globals()[df_name]['locality name'].str.lower()\n",
+    "\n",
+    "lst_locality_df = [df_2009_locality,df_2010_locality,df_2011_locality,\n",
+    "                   df_2012_locality,df_2013_locality,df_2014_locality,\n",
+    "                   df_2015_locality,df_2016_locality,df_2017_locality,\n",
+    "                   df_2018_locality,df_2019_locality,df_2020_locality]\n",
+    "\n",
+    "#  Merge the datasets\n",
+    "for i in range(len(lst_yrs)):\n",
+    "    lst_df[i] = pd.merge(lst_df[i], lst_locality_df[i], how='left', left_on=['contractor/carrier', 'locality'], right_on=['carrier number', 'locality number'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3 - Clean<a class=\"anchor\" id=\"clean_1_3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,6 +367,7 @@
        "      <th>contractor/carrier</th>\n",
        "      <th>contractor/carrier name</th>\n",
        "      <th>locality</th>\n",
+       "      <th>locality name</th>\n",
        "      <th>hcpcs</th>\n",
        "      <th>short description</th>\n",
        "      <th>long description</th>\n",
@@ -330,88 +382,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>2017</td>\n",
+       "      <th>179</th>\n",
+       "      <td>2019</td>\n",
        "      <td>01102</td>\n",
        "      <td>northern california</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>A0430</td>\n",
-       "      <td>Fixed wing air transport</td>\n",
-       "      <td>Ambulance service, conventional air services, ...</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.079</td>\n",
-       "      <td>3016.510</td>\n",
-       "      <td>3135.66</td>\n",
-       "      <td>4703.49</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4703.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>00835</td>\n",
-       "      <td>oregon</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>A0427</td>\n",
-       "      <td>Als1-emergency</td>\n",
-       "      <td>Ambulance service, advanced life support, emer...</td>\n",
-       "      <td>214.47</td>\n",
-       "      <td>1.900</td>\n",
-       "      <td>0.962</td>\n",
-       "      <td>404.59</td>\n",
-       "      <td>408.55</td>\n",
-       "      <td>500.89</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>01182</td>\n",
-       "      <td>southern california</td>\n",
-       "      <td>18.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>redding</td>\n",
        "      <td>A0436</td>\n",
        "      <td>Rotary wing air mileage</td>\n",
        "      <td>Rotary wing air mileage, per statute mile</td>\n",
        "      <td>1.00</td>\n",
-       "      <td>1.177</td>\n",
-       "      <td>23.090</td>\n",
-       "      <td>23.09</td>\n",
-       "      <td>34.64</td>\n",
+       "      <td>1.074</td>\n",
+       "      <td>23.620</td>\n",
+       "      <td>23.62</td>\n",
+       "      <td>35.43</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>34.64</td>\n",
+       "      <td>35.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1226</th>\n",
+       "      <th>179</th>\n",
        "      <td>2020</td>\n",
-       "      <td>13292</td>\n",
-       "      <td>ghi/new york</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>A0427</td>\n",
-       "      <td>Als1-emergency</td>\n",
-       "      <td>Ambulance service, advanced life support, emer...</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>1.214</td>\n",
-       "      <td>231.980</td>\n",
-       "      <td>516.92</td>\n",
-       "      <td>521.99</td>\n",
-       "      <td>639.96</td>\n",
+       "      <td>01102</td>\n",
+       "      <td>northern california</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>redding</td>\n",
+       "      <td>A0436</td>\n",
+       "      <td>Rotary wing air mileage</td>\n",
+       "      <td>Rotary wing air mileage, per statute mile</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.084</td>\n",
+       "      <td>23.830</td>\n",
+       "      <td>23.83</td>\n",
+       "      <td>35.75</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>35.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>507</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>06102</td>\n",
-       "      <td>illinois</td>\n",
-       "      <td>15.0</td>\n",
+       "      <th>879</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>12402</td>\n",
+       "      <td>new jersey</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>northern nj</td>\n",
        "      <td>A0428</td>\n",
        "      <td>Bls</td>\n",
        "      <td>Ambulance service, basic life support, non-eme...</td>\n",
-       "      <td>221.63</td>\n",
+       "      <td>209.44</td>\n",
        "      <td>1.000</td>\n",
-       "      <td>1.057</td>\n",
-       "      <td>235.08</td>\n",
-       "      <td>237.39</td>\n",
-       "      <td>291.04</td>\n",
+       "      <td>1.206</td>\n",
+       "      <td>244.43</td>\n",
+       "      <td>246.83</td>\n",
+       "      <td>302.61</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -419,50 +440,38 @@
        "</div>"
       ],
       "text/plain": [
-       "      year contractor/carrier contractor/carrier name  locality  hcpcs  \\\n",
-       "293   2017              01102     northern california      75.0  A0430   \n",
-       "86    2012              00835                  oregon      99.0  A0427   \n",
-       "323   2018              01182     southern california      18.0  A0436   \n",
-       "1226  2020              13292            ghi/new york       4.0  A0427   \n",
-       "507   2015              06102                illinois      15.0  A0428   \n",
+       "     year contractor/carrier contractor/carrier name  locality locality name  \\\n",
+       "179  2019              01102     northern california      61.0       redding   \n",
+       "179  2020              01102     northern california      61.0       redding   \n",
+       "879  2011              12402              new jersey       1.0  northern nj    \n",
        "\n",
-       "             short description  \\\n",
-       "293   Fixed wing air transport   \n",
-       "86              Als1-emergency   \n",
-       "323    Rotary wing air mileage   \n",
-       "1226            Als1-emergency   \n",
-       "507                        Bls   \n",
+       "     hcpcs        short description  \\\n",
+       "179  A0436  Rotary wing air mileage   \n",
+       "179  A0436  Rotary wing air mileage   \n",
+       "879  A0428                      Bls   \n",
        "\n",
-       "                                       long description     rvu   gpci  \\\n",
-       "293   Ambulance service, conventional air services, ...    1.00  1.079   \n",
-       "86    Ambulance service, advanced life support, emer...  214.47  1.900   \n",
-       "323           Rotary wing air mileage, per statute mile    1.00  1.177   \n",
-       "1226  Ambulance service, advanced life support, emer...    1.90  1.214   \n",
-       "507   Ambulance service, basic life support, non-eme...  221.63  1.000   \n",
+       "                                      long description     rvu   gpci  \\\n",
+       "179          Rotary wing air mileage, per statute mile    1.00  1.074   \n",
+       "179          Rotary wing air mileage, per statute mile    1.00  1.084   \n",
+       "879  Ambulance service, basic life support, non-eme...  209.44  1.000   \n",
        "\n",
-       "      base rate  urban base rate / urban mileage  \\\n",
-       "293    3016.510                          3135.66   \n",
-       "86        0.962                           404.59   \n",
-       "323      23.090                            23.09   \n",
-       "1226    231.980                           516.92   \n",
-       "507       1.057                           235.08   \n",
+       "     base rate  urban base rate / urban mileage  \\\n",
+       "179     23.620                            23.62   \n",
+       "179     23.830                            23.83   \n",
+       "879      1.206                           244.43   \n",
        "\n",
-       "      rural base rate / rural mileage  rural base rate / lowest quartile  \\\n",
-       "293                           4703.49                                NaN   \n",
-       "86                             408.55                             500.89   \n",
-       "323                             34.64                                NaN   \n",
-       "1226                           521.99                             639.96   \n",
-       "507                            237.39                             291.04   \n",
+       "     rural base rate / rural mileage  rural base rate / lowest quartile  \\\n",
+       "179                            35.43                                NaN   \n",
+       "179                            35.75                                NaN   \n",
+       "879                           246.83                             302.61   \n",
        "\n",
-       "      rural ground miles  \n",
-       "293              4703.49  \n",
-       "86                   NaN  \n",
-       "323                34.64  \n",
-       "1226                 NaN  \n",
-       "507                  NaN  "
+       "     rural ground miles  \n",
+       "179               35.43  \n",
+       "179               35.75  \n",
+       "879                 NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +479,7 @@
    "source": [
     "# Create list of column names for an intuitive reordering\n",
     "col_reorder = ['year','contractor/carrier','contractor/carrier name',\n",
-    "               'locality','hcpcs','short description','long description',\n",
+    "               'locality','locality name', 'hcpcs','short description','long description',\n",
     "               'rvu','gpci','base rate','urban base rate / urban mileage',\n",
     "               'rural base rate / rural mileage','rural base rate / lowest quartile',\n",
     "               'rural ground miles']\n",
@@ -482,7 +491,7 @@
     "    \n",
     "# Compile all dataframes\n",
     "df = pd.concat(lst_df)\n",
-    "df.sample(5)"
+    "df.sample(3)"
    ]
   },
   {
@@ -493,11 +502,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### In order to proceed with our analysis let us define the features in our data\n",
+    "* *Year* - Year of fee schedule\n",
+    "\n",
+    "* *Contractor/Carrier* - Entity which has the responsibility for adjudicating and paying claims within a defined geographical location\n",
+    "\n",
+    "* *Locality* - This field represents subsets of locations within a defined jurisdiction with different GPCI\n",
+    "\n",
+    "* *HCPCS* - This field has the full range of HCPCS services payable under the ambulance fee schedule\n",
+    "    * \"HCPCS is a collection of standardized codes that represent medical procedures, supplies, products and services.\" [source](https://www.nlm.nih.gov/research/umls/sourcereleasedocs/current/HCPCS/index.html#:~:text=HCPCS%20is%20a%20collection%20of,by%20Medicare%20and%20other%20insurers.&text=HCPCS%20is%20divided%20into%20two%20subsystems%2C%20Level%20I%20and%20Level%20II.)\n",
+    "    \n",
+    "* *Relative Value Unit (RVU)* - Ratio from 1 - 3.25 rating the complexity or cost of a given ambulance ride (i.e. a normal ambulance ride has an RVU of 1). The RVU Values are:\n",
+    "    * BLS (A0428) 1.00 \n",
+    "    * ALS1 (A0426) 1.20 \n",
+    "    * BLS - Emergency (A0429) 1.60 \n",
+    "    * PI (A0432) 1.75\n",
+    "    * ALS1- Emergency (A0427) 1.90 \n",
+    "    * ALS2 (A0433) 2.75 \n",
+    "    * SCT (A0434) 3.25 \n",
+    "    \n",
+    "* *Geographic Practice Cost Index (GPCI)* - \"Inflation factor\" to adjust payment to account for regional differences\n",
+    "\n",
+    "* *Base Rate* - The Base Rate is a nationally uniform “base” amount used to calculate each HCPCS’ payment amount\n",
+    "\n",
+    "* *Urban Base Rate / Mileage* - Equation that calculates urban fee rate based on RVU, GPCI, and National Base Rate\n",
+    "\n",
+    "* *Rural Base Rate / Mileage* - Equation that calculates rural fee rate based on RVU, GPCI, and National Base Rate\n",
+    "\n",
+    "* *Rural Base Rate / Lowest Quartile* - This field displays the rural base rate adjusted by the “super-rural bonus” multiplier of 22.6%. This is to incentivize medical services in sparsely populated areas\n",
+    "\n",
+    "* *Rural Ground Miles* - This field displays the amounts for rural ground miles 1-17\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -508,10 +546,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['brazoria', 'dallas', 'galveston', 'houston', 'beaumont',\n",
+       "       'fort worth', 'austin', 'rest of state ', 'brazoria, tx',\n",
+       "       'dallas, tx', 'galveston, tx', 'houston, tx', 'beaumont, tx',\n",
+       "       'fort worth, tx', 'austin, tx', 'rest of texas'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['contractor/carrier name'] == 'texas']['locality name'].unique()"
+   ]
   },
   {
    "cell_type": "markdown",
