reorganized folder structure

--- a/_Ambulance_Fee_Schedule_Analysis.ipynb
+++ b/_Ambulance_Fee_Schedule_Analysis.ipynb
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "# Import HCPCS Code dataframe\n",
-    "df_code = pd.read_excel('./_hcpcs/hcpcs2020_anweb/HCPCS_2020.xlsx')\n",
+    "df_code = pd.read_excel('./_hcpcs/HCPCS_2020.xlsx')\n",
     "\n",
     "# Lowercase column names\n",
     "df_code.columns = df_code.columns.str.lower()\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,57 +382,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>01102</td>\n",
-       "      <td>northern california</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>redding</td>\n",
-       "      <td>A0436</td>\n",
-       "      <td>Rotary wing air mileage</td>\n",
-       "      <td>Rotary wing air mileage, per statute mile</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.074</td>\n",
-       "      <td>23.620</td>\n",
-       "      <td>23.62</td>\n",
-       "      <td>35.43</td>\n",
+       "      <th>98</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>00835</td>\n",
+       "      <td>oregon</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>rest of oregon</td>\n",
+       "      <td>A0427</td>\n",
+       "      <td>Als1-emergency</td>\n",
+       "      <td>Ambulance service, advanced life support, emer...</td>\n",
+       "      <td>209.65</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>0.964</td>\n",
+       "      <td>396.060000</td>\n",
+       "      <td>399.950000</td>\n",
+       "      <td>490.330</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>35.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>01102</td>\n",
-       "      <td>northern california</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>redding</td>\n",
-       "      <td>A0436</td>\n",
-       "      <td>Rotary wing air mileage</td>\n",
-       "      <td>Rotary wing air mileage, per statute mile</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.084</td>\n",
-       "      <td>23.830</td>\n",
-       "      <td>23.83</td>\n",
-       "      <td>35.75</td>\n",
+       "      <th>805</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>11502</td>\n",
+       "      <td>north carolina</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>statewide</td>\n",
+       "      <td>A0426</td>\n",
+       "      <td>Als 1</td>\n",
+       "      <td>Ambulance service, advanced life support, non-...</td>\n",
+       "      <td>220.74</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>0.930</td>\n",
+       "      <td>256.946658</td>\n",
+       "      <td>259.465743</td>\n",
+       "      <td>318.105</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>35.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>879</th>\n",
-       "      <td>2011</td>\n",
+       "      <th>908</th>\n",
+       "      <td>2009</td>\n",
        "      <td>12402</td>\n",
        "      <td>new jersey</td>\n",
        "      <td>1.0</td>\n",
        "      <td>northern nj</td>\n",
-       "      <td>A0428</td>\n",
-       "      <td>Bls</td>\n",
-       "      <td>Ambulance service, basic life support, non-eme...</td>\n",
-       "      <td>209.44</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>1.206</td>\n",
-       "      <td>244.43</td>\n",
-       "      <td>246.83</td>\n",
-       "      <td>302.61</td>\n",
+       "      <td>A0433</td>\n",
+       "      <td>Als 2</td>\n",
+       "      <td>Advanced life support, level 2 (als 2)</td>\n",
+       "      <td>212.13</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>1.228</td>\n",
+       "      <td>689.990000</td>\n",
+       "      <td>696.760000</td>\n",
+       "      <td>854.230</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -440,38 +440,38 @@
        "</div>"
       ],
       "text/plain": [
-       "     year contractor/carrier contractor/carrier name  locality locality name  \\\n",
-       "179  2019              01102     northern california      61.0       redding   \n",
-       "179  2020              01102     northern california      61.0       redding   \n",
-       "879  2011              12402              new jersey       1.0  northern nj    \n",
+       "     year contractor/carrier contractor/carrier name  locality  \\\n",
+       "98   2010              00835                  oregon      99.0   \n",
+       "805  2016              11502          north carolina       0.0   \n",
+       "908  2009              12402              new jersey       1.0   \n",
        "\n",
-       "     hcpcs        short description  \\\n",
-       "179  A0436  Rotary wing air mileage   \n",
-       "179  A0436  Rotary wing air mileage   \n",
-       "879  A0428                      Bls   \n",
+       "      locality name  hcpcs short description  \\\n",
+       "98   rest of oregon  A0427    Als1-emergency   \n",
+       "805      statewide   A0426             Als 1   \n",
+       "908    northern nj   A0433             Als 2   \n",
        "\n",
-       "                                      long description     rvu   gpci  \\\n",
-       "179          Rotary wing air mileage, per statute mile    1.00  1.074   \n",
-       "179          Rotary wing air mileage, per statute mile    1.00  1.084   \n",
-       "879  Ambulance service, basic life support, non-eme...  209.44  1.000   \n",
+       "                                      long description     rvu  gpci  \\\n",
+       "98   Ambulance service, advanced life support, emer...  209.65  1.90   \n",
+       "805  Ambulance service, advanced life support, non-...  220.74  1.20   \n",
+       "908             Advanced life support, level 2 (als 2)  212.13  2.75   \n",
        "\n",
        "     base rate  urban base rate / urban mileage  \\\n",
-       "179     23.620                            23.62   \n",
-       "179     23.830                            23.83   \n",
-       "879      1.206                           244.43   \n",
+       "98       0.964                       396.060000   \n",
+       "805      0.930                       256.946658   \n",
+       "908      1.228                       689.990000   \n",
        "\n",
        "     rural base rate / rural mileage  rural base rate / lowest quartile  \\\n",
-       "179                            35.43                                NaN   \n",
-       "179                            35.75                                NaN   \n",
-       "879                           246.83                             302.61   \n",
+       "98                        399.950000                            490.330   \n",
+       "805                       259.465743                            318.105   \n",
+       "908                       696.760000                            854.230   \n",
        "\n",
        "     rural ground miles  \n",
-       "179               35.43  \n",
-       "179               35.75  \n",
-       "879                 NaN  "
+       "98                  NaN  \n",
+       "805                 NaN  \n",
+       "908                 NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
        "       'fort worth, tx', 'austin, tx', 'rest of texas'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
