--- a/_Ambulance_Fee_Schedule_Analysis.ipynb
+++ b/_Ambulance_Fee_Schedule_Analysis.ipynb
@@ -1772,6 +1772,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['Actual Per Capita Costs', 'Imaging Events per 1000 Beneficiaries']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {
     "scrolled": true
