reorganizing folder structure

--- a/_Ambulance_Fee_Schedule_Analysis.ipynb
+++ b/_Ambulance_Fee_Schedule_Analysis.ipynb
@@ -234,7 +234,7 @@
    "outputs": [],
    "source": [
     "# Import HCPCS Code dataframe\n",
-    "df_code = pd.read_excel('./_hcpcs/HCPCS_2020.xlsx')\n",
+    "df_code = pd.read_excel('./lookup_tables/_hcpcs/HCPCS_2020.xlsx')\n",
     "\n",
     "# Lowercase column names\n",
     "df_code.columns = df_code.columns.str.lower()\n",
@@ -263,9 +263,9 @@
     "for yr in lst_yrs:\n",
     "    df_name = 'df_carrier_code_' + str(yr)\n",
     "    try:\n",
-    "        globals()[df_name] = pd.read_csv('./_index/' + str(yr) + '.csv', header=None)\n",
+    "        globals()[df_name] = pd.read_csv('./lookup_tables/_index/' + str(yr) + '.csv', header=None)\n",
     "    except:\n",
-    "        globals()[df_name] = pd.read_excel('./_index/' + str(yr) + '.xlsx', header=None)\n",
+    "        globals()[df_name] = pd.read_excel('./lookup_tables/_index/' + str(yr) + '.xlsx', header=None)\n",
     "    \n",
     "    # new data frame with split value columns \n",
     "    split_columns = globals()[df_name][0].str.split(\" \", n = 1, expand = True)\n",
@@ -313,7 +313,7 @@
     "# Create pandas df for each txt file / year\n",
     "for yr in lst_yrs:\n",
     "    df_name = 'df_' + str(yr) + '_locality'\n",
-    "    globals()[df_name] = pd.read_csv('./_locality/RVU' + str(yr)[-2:] + '/' + str(yr)[-2:] + 'LOCCO.csv')\n",
+    "    globals()[df_name] = pd.read_csv('./lookup_tables/_locality/RVU' + str(yr)[-2:] + '/' + str(yr)[-2:] + 'LOCCO.csv')\n",
     "    # Drop rows with all NA or all ' '\n",
     "    globals()[df_name].replace(' ', np.NaN, inplace=True)\n",
     "    globals()[df_name].dropna(how = 'all', inplace = True)\n",
@@ -393,88 +393,88 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>318</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>04312</td>\n",
-       "      <td>oklahoma</td>\n",
+       "      <th>297</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>03102</td>\n",
+       "      <td>arizona</td>\n",
        "      <td>0.0</td>\n",
        "      <td>statewide</td>\n",
-       "      <td>A0431</td>\n",
-       "      <td>Rotary wing air transport</td>\n",
-       "      <td>Ambulance service, conventional air services, ...</td>\n",
-       "      <td>3445.07</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.864</td>\n",
-       "      <td>3210.80524</td>\n",
-       "      <td>4816.20786</td>\n",
+       "      <td>A0434</td>\n",
+       "      <td>Specialty care transport</td>\n",
+       "      <td>Specialty care transport (sct)</td>\n",
+       "      <td>216.19</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.978</td>\n",
+       "      <td>705.633134</td>\n",
+       "      <td>712.551106</td>\n",
+       "      <td>873.587656</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4816.20786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>04412</td>\n",
-       "      <td>texas</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>austin</td>\n",
-       "      <td>A0425</td>\n",
-       "      <td>Ground mileage</td>\n",
-       "      <td>Ground mileage, per statute mile</td>\n",
-       "      <td>7.13</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.27000</td>\n",
-       "      <td>7.34000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11.02000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1235</th>\n",
+       "      <th>421</th>\n",
        "      <td>2019</td>\n",
-       "      <td>13282</td>\n",
-       "      <td>western new york</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>rest of state</td>\n",
-       "      <td>A0436</td>\n",
-       "      <td>Rotary wing air mileage</td>\n",
-       "      <td>Rotary wing air mileage, per statute mile</td>\n",
-       "      <td>23.62</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.950</td>\n",
-       "      <td>23.62000</td>\n",
-       "      <td>35.43000</td>\n",
+       "      <td>02202</td>\n",
+       "      <td>idaho</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>statewide</td>\n",
+       "      <td>A0426</td>\n",
+       "      <td>Als 1</td>\n",
+       "      <td>Ambulance service, advanced life support, non-...</td>\n",
+       "      <td>229.91</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>0.902</td>\n",
+       "      <td>262.110000</td>\n",
+       "      <td>264.670000</td>\n",
+       "      <td>324.490000</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>35.43000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>949</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>13202</td>\n",
+       "      <td>empire new york</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>poughkpsie/n nyc suburbs</td>\n",
+       "      <td>A0426</td>\n",
+       "      <td>Als 1</td>\n",
+       "      <td>Ambulance service, advanced life support, non-...</td>\n",
+       "      <td>221.63</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.074</td>\n",
+       "      <td>285.330000</td>\n",
+       "      <td>288.120000</td>\n",
+       "      <td>353.240000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      year contractor/carrier contractor/carrier name  locality  \\\n",
-       "318   2014              04312                oklahoma       0.0   \n",
-       "396   2015              04412                   texas      31.0   \n",
-       "1235  2019              13282        western new york      99.0   \n",
+       "     year contractor/carrier contractor/carrier name  locality  \\\n",
+       "297  2013              03102                 arizona       0.0   \n",
+       "421  2019              02202                   idaho       0.0   \n",
+       "949  2015              13202         empire new york       3.0   \n",
        "\n",
-       "       locality name  hcpcs          short description  \\\n",
-       "318       statewide   A0431  Rotary wing air transport   \n",
-       "396           austin  A0425             Ground mileage   \n",
-       "1235  rest of state   A0436    Rotary wing air mileage   \n",
+       "                locality name  hcpcs         short description  \\\n",
+       "297                statewide   A0434  Specialty care transport   \n",
+       "421                statewide   A0426                     Als 1   \n",
+       "949  poughkpsie/n nyc suburbs  A0426                     Als 1   \n",
        "\n",
-       "                                       long description  base rate  rvu  \\\n",
-       "318   Ambulance service, conventional air services, ...    3445.07  1.0   \n",
-       "396                    Ground mileage, per statute mile       7.13  1.0   \n",
-       "1235          Rotary wing air mileage, per statute mile      23.62  1.0   \n",
+       "                                      long description  base rate   rvu  \\\n",
+       "297                     Specialty care transport (sct)     216.19  3.25   \n",
+       "421  Ambulance service, advanced life support, non-...     229.91  1.20   \n",
+       "949  Ambulance service, advanced life support, non-...     221.63  1.20   \n",
        "\n",
-       "       gpci  urban base rate / urban mileage  rural base rate / rural mileage  \\\n",
-       "318   0.864                       3210.80524                       4816.20786   \n",
-       "396     NaN                          7.27000                          7.34000   \n",
-       "1235  0.950                         23.62000                         35.43000   \n",
+       "      gpci  urban base rate / urban mileage  rural base rate / rural mileage  \\\n",
+       "297  0.978                       705.633134                       712.551106   \n",
+       "421  0.902                       262.110000                       264.670000   \n",
+       "949  1.074                       285.330000                       288.120000   \n",
        "\n",
-       "      rural base rate / lowest quartile  rural ground miles  \n",
-       "318                                 NaN          4816.20786  \n",
-       "396                                 NaN            11.02000  \n",
-       "1235                                NaN            35.43000  "
+       "     rural base rate / lowest quartile  rural ground miles  \n",
+       "297                         873.587656                 NaN  \n",
+       "421                         324.490000                 NaN  \n",
+       "949                         353.240000                 NaN  "
       ]
      },
      "execution_count": 6,
@@ -1331,7 +1331,7 @@
    ],
    "source": [
     "# Read in data\n",
-    "df_rides = pd.read_csv('./_temp/air_temp.csv')\n",
+    "df_rides = pd.read_csv('./lookup_tables/_temp/air_temp.csv')\n",
     "\n",
     "# Remove NA's \n",
     "df_rides = df_rides.loc[~df_rides['TOBS'].isna()]\n",
@@ -1772,16 +1772,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>contractor/carrier</th>\n",
+       "      <th>contractor/carrier name</th>\n",
+       "      <th>locality</th>\n",
+       "      <th>locality name</th>\n",
+       "      <th>hcpcs</th>\n",
+       "      <th>short description</th>\n",
+       "      <th>long description</th>\n",
+       "      <th>base rate</th>\n",
+       "      <th>rvu</th>\n",
+       "      <th>gpci</th>\n",
+       "      <th>urban base rate / urban mileage</th>\n",
+       "      <th>rural base rate / rural mileage</th>\n",
+       "      <th>rural base rate / lowest quartile</th>\n",
+       "      <th>rural ground miles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>00512</td>\n",
+       "      <td>mississippi</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>mississippi</td>\n",
+       "      <td>A0425</td>\n",
+       "      <td>Ground mileage</td>\n",
+       "      <td>Ground mileage, per statute mile</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.927</td>\n",
+       "      <td>6.87</td>\n",
+       "      <td>6.94</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>00512</td>\n",
+       "      <td>mississippi</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>mississippi</td>\n",
+       "      <td>A0426</td>\n",
+       "      <td>Als 1</td>\n",
+       "      <td>Ambulance service, advanced life support, non-...</td>\n",
+       "      <td>209.65</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.927</td>\n",
+       "      <td>243.50</td>\n",
+       "      <td>245.89</td>\n",
+       "      <td>301.46</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year contractor/carrier contractor/carrier name  locality locality name  \\\n",
+       "0  2010              00512             mississippi       0.0   mississippi   \n",
+       "1  2010              00512             mississippi       0.0   mississippi   \n",
+       "\n",
+       "   hcpcs short description                                   long description  \\\n",
+       "0  A0425    Ground mileage                   Ground mileage, per statute mile   \n",
+       "1  A0426             Als 1  Ambulance service, advanced life support, non-...   \n",
+       "\n",
+       "   base rate  rvu   gpci  urban base rate / urban mileage  \\\n",
+       "0       6.74  1.0  0.927                             6.87   \n",
+       "1     209.65  1.2  0.927                           243.50   \n",
+       "\n",
+       "   rural base rate / rural mileage  rural base rate / lowest quartile  \\\n",
+       "0                             6.94                                NaN   \n",
+       "1                           245.89                             301.46   \n",
+       "\n",
+       "   rural ground miles  \n",
+       "0               10.41  \n",
+       "1                 NaN  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[['Actual Per Capita Costs', 'Imaging Events per 1000 Beneficiaries']]"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -1806,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "scrolled": false
    },
@@ -1837,34 +1943,34 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(1,0,1)(0,1,1)[12] intercept   : AIC=inf, Time=0.40 sec\n",
+      " ARIMA(1,0,1)(0,1,1)[12] intercept   : AIC=inf, Time=0.41 sec\n",
       " ARIMA(0,0,0)(0,1,0)[12] intercept   : AIC=726.215, Time=0.01 sec\n",
       " ARIMA(1,0,0)(1,1,0)[12] intercept   : AIC=714.128, Time=0.11 sec\n",
       " ARIMA(0,0,1)(0,1,1)[12] intercept   : AIC=690.079, Time=0.13 sec\n",
       " ARIMA(0,0,0)(0,1,0)[12]             : AIC=724.257, Time=0.01 sec\n",
-      " ARIMA(0,0,1)(0,1,0)[12] intercept   : AIC=722.508, Time=0.04 sec\n",
-      " ARIMA(0,0,1)(1,1,1)[12] intercept   : AIC=inf, Time=0.51 sec\n",
-      " ARIMA(0,0,1)(0,1,2)[12] intercept   : AIC=inf, Time=1.00 sec\n",
+      " ARIMA(0,0,1)(0,1,0)[12] intercept   : AIC=722.508, Time=0.03 sec\n",
+      " ARIMA(0,0,1)(1,1,1)[12] intercept   : AIC=inf, Time=0.53 sec\n",
+      " ARIMA(0,0,1)(0,1,2)[12] intercept   : AIC=inf, Time=1.01 sec\n",
       " ARIMA(0,0,1)(1,1,0)[12] intercept   : AIC=714.728, Time=0.09 sec\n",
-      " ARIMA(0,0,1)(1,1,2)[12] intercept   : AIC=inf, Time=1.21 sec\n",
-      " ARIMA(0,0,0)(0,1,1)[12] intercept   : AIC=inf, Time=0.14 sec\n",
-      " ARIMA(0,0,2)(0,1,1)[12] intercept   : AIC=691.926, Time=0.22 sec\n",
+      " ARIMA(0,0,1)(1,1,2)[12] intercept   : AIC=inf, Time=1.17 sec\n",
+      " ARIMA(0,0,0)(0,1,1)[12] intercept   : AIC=inf, Time=0.19 sec\n",
+      " ARIMA(0,0,2)(0,1,1)[12] intercept   : AIC=691.926, Time=0.20 sec\n",
       " ARIMA(1,0,0)(0,1,1)[12] intercept   : AIC=690.791, Time=0.12 sec\n",
-      " ARIMA(1,0,2)(0,1,1)[12] intercept   : AIC=693.259, Time=0.32 sec\n",
-      " ARIMA(0,0,1)(0,1,1)[12]             : AIC=688.079, Time=0.09 sec\n",
+      " ARIMA(1,0,2)(0,1,1)[12] intercept   : AIC=693.259, Time=0.31 sec\n",
+      " ARIMA(0,0,1)(0,1,1)[12]             : AIC=688.079, Time=0.10 sec\n",
       " ARIMA(0,0,1)(0,1,0)[12]             : AIC=720.532, Time=0.02 sec\n",
       " ARIMA(0,0,1)(1,1,1)[12]             : AIC=inf, Time=0.35 sec\n",
-      " ARIMA(0,0,1)(0,1,2)[12]             : AIC=inf, Time=0.81 sec\n",
+      " ARIMA(0,0,1)(0,1,2)[12]             : AIC=inf, Time=0.82 sec\n",
       " ARIMA(0,0,1)(1,1,0)[12]             : AIC=712.741, Time=0.04 sec\n",
-      " ARIMA(0,0,1)(1,1,2)[12]             : AIC=inf, Time=1.08 sec\n",
+      " ARIMA(0,0,1)(1,1,2)[12]             : AIC=inf, Time=1.06 sec\n",
       " ARIMA(0,0,0)(0,1,1)[12]             : AIC=inf, Time=0.07 sec\n",
-      " ARIMA(1,0,1)(0,1,1)[12]             : AIC=inf, Time=0.40 sec\n",
-      " ARIMA(0,0,2)(0,1,1)[12]             : AIC=689.926, Time=0.16 sec\n",
+      " ARIMA(1,0,1)(0,1,1)[12]             : AIC=inf, Time=0.39 sec\n",
+      " ARIMA(0,0,2)(0,1,1)[12]             : AIC=689.926, Time=0.15 sec\n",
       " ARIMA(1,0,0)(0,1,1)[12]             : AIC=688.791, Time=0.10 sec\n",
-      " ARIMA(1,0,2)(0,1,1)[12]             : AIC=691.261, Time=0.21 sec\n",
+      " ARIMA(1,0,2)(0,1,1)[12]             : AIC=691.261, Time=0.20 sec\n",
       "\n",
       "Best model:  ARIMA(0,0,1)(0,1,1)[12]          \n",
-      "Total fit time: 7.664 seconds\n"
+      "Total fit time: 7.642 seconds\n"
      ]
     },
     {
